<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Blogger-me</string>
	<string name="menu_settings">Settings</string>
	<string name="title_activity_main">Blogger</string>
	<string name="blog_title">Title of Blog</string>
	<string name="post_button">Posts</string>
	<string name="edit_button">Edit</string>
	<string name="publish_button">Publish</string>
	<string name="post_title">Post title</string>
	<string name="post_body">Post content</string>
	<string name="post_labels">Labels</string>
	<string name="blogger_logo">Logo</string>
	<string name="login_email">Email</string>
	<string name="login_pwd">Password</string>
	<string name="login_btn">Login</string>
	<string name="logout">Logout</string>
	<string name="no_data">&lt;No data&gt;</string>
	<string name="blogs_button">Blogs</string>
	<string name="create_button">New</string>
	<string name="hello_world">Hello world!</string>
	<string name="title_activity_post_list">PostListActivity</string>
	<string name="title_activity_post_display">PostDisplayActivity</string>
	<string name="title_activity_create_post">CreatePostActivity</string>
	<string name="title">Title</string>
	<string name="content">Content</string>
	<string name="create_post">Create Post</string>
	<string name="menu_accounts">Change Account</string>
	<string name="title_activity_async_create_post_result">AsyncCreatePostResult</string>
	<string name="title_activity_blog_list">BlogListActivity</string>
	<string name="welcome_user">Welcome!</string>
	<string name="menu_logout">Logout</string>
	<string name="posts_button">Posts</string>
	<string name="menu_edit">Edit</string>
	<string name="crash_toast_text">Ooops! I crashed, but a report has been sent to my developer to help fix the issue!</string>
	<string name="crash_dialog_title">CrashTest has crashed</string>
	<string name="crash_dialog_text">An unexpected error occurred forcing the
		application to stop. Please help us fix this by sending us error data,
		all you have to do is click OK.	</string>
	<string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
	<string name="crash_dialog_ok_toast">Thank you !</string>
	<string name="menu_savedraft">Save Draft</string>
	<string name="menu_drafts">Drafts</string>
	<string name="title_activity_draft_list">DraftListActivity</string>
	<string name="action_settings">Settings</string>
	<string name="menu_publish">Publish</string>
	<string-array name="drawer_array">
	    <item>Editor</item>
		<item>Blogs</item>
		<item>Posts</item>
		<item>Drafts</item>
	</string-array>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="menu_cancel">Cancel</string>
	<string name="action_clearall">Clear All</string>

</resources>