<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView
		android:id="@+id/blogTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_marginBottom="-2dp"
		android:padding="@dimen/padding_medium"
		android:text="@string/blog_title"
		android:textAppearance="@style/blog_style"
		android:background="@drawable/gradient"
		android:gravity="center" />
	<Button
		android:id="@+id/blogsbutton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/blogTitle"
		android:layout_alignBottom="@+id/blogTitle"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="8dp"
		android:background="@drawable/custom_btn"
		android:text="@string/blogs_button"
		android:textAppearance="@style/editor_button"
		android:textColor="#FFFFFF" />
	<Button
		android:id="@+id/createbutton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/blogTitle"
		android:layout_alignBottom="@+id/blogTitle"
		android:layout_alignParentRight="true"
		android:layout_marginRight="8dp"
		android:background="@drawable/custom_btn"
		android:text="@string/create_button"
		android:textAppearance="@style/editor_button"
		android:textColor="#FFFFFF" />
	<LinearLayout
		android:id="@+id/LayoutForList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_marginTop="120dp"
		android:orientation="vertical">
		<TextView
			android:id="@id/android:empty"
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:background="@android:drawable/alert_dark_frame"
			android:gravity="center_horizontal"
			android:padding="20dp"
			android:text="@string/no_data"
			android:textColor="#FFFFFF" />
	</LinearLayout>
	<ListView
		android:id="@+id/android:list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/blogTitle"
		android:drawSelectorOnTop="false"
		android:padding="15dp" />
</RelativeLayout>
